--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
         <activity android:name=".SeasonwinterActivity" />
         <activity android:name=".WinterdisActivity" />
         <activity android:name=".SummerdisActivity" />
+        <activity android:name=".Seasonwinterdis"/> >
+
 
 
 
