--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.google.android.gms:play-services:8.3.0'
     compile files('libs/picasso-2.5.2.jar')
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
